--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -51,7 +51,7 @@
   }
 }
 
-.form-container {
+.login-register-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,77 +62,59 @@
 }
 
 @media screen and (min-width: 992px) {
-  .form-container {
+  .login-register-container {
     width: 350px;
     flex-shrink: 0;
     box-shadow: 0px 8px 40px rgba(7, 7, 7, 0.08);
-    padding: 64px 48px 64px 48px;
+    padding: 48px 28px 48px 28px;
   }
 }
 
-.input-container {
+
+.login-register-tab{
   display: flex;
-  flex-direction: column;
-  margin-top: 20px;
   width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  padding: 0px;
 }
 
-.input-label {
-  margin-bottom: 0px;
+.login-tab{
+  width: 300px;
+  height: 45px;
+  border-width: 0px;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: black;
   font-family: 'Roboto';
   font-weight: bold;
-  font-size: 12px;
-  line-height: 16px;
-  color: #475569;
-}
-
-.username-input-field {
-  font-size: 14px;
-  height: 40px;
-  border: 1px solid #d7dfe9;
-  background-color: #e2e8f0;
-  color: #64748b;
-  border-radius: 2px;
-  margin-top: 5px;
-  padding: 8px 16px 8px 16px;
-  outline: none;
-}
-
-.password-input-field {
-  font-size: 14px;
-  height: 40px;
-  border: 1px solid #d7dfe9;
-  background-color: #e2e8f0;
-  color: #64748b;
-  border-radius: 2px;
-  margin-top: 5px;
-  padding: 8px 16px 8px 16px;
-  outline: none;
-}
-
-.login-button {
-  font-family: 'Roboto';
-  font-weight: bold;
-  font-size: 14px;
-  color: #ffffff;
-  height: 40px;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 2px;
-  background-color: #0b69ff;
-  border-radius: 8px;
-  border: none;
   cursor: pointer;
-  outline: none;
 }
 
-.error-message {
-  align-self: start;
-  font-size: 12px;
-  margin-top: 3px;
-  margin-bottom: 0px;
+.register-tab{
+  width: 300px;
+  height: 45px;
+  border-width: 0px;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: black;
   font-family: 'Roboto';
-  font-size: 12px;
-  line-height: 16px;
-  color: #ff0b37;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.under-score{
+  border: 2px solid #0b69ff;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-radius: 5px;
 }
